--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astroid==2.3.3
+autopep8==1.5.1
 cycler==0.10.0
 decorator==4.4.2
 imageio==2.8.0
@@ -9,7 +10,9 @@ matplotlib==3.2.1
 mccabe==0.6.1
 networkx==2.4
 numpy==1.18.2
+opencv-python==4.2.0.34
 Pillow==7.1.1
+pycodestyle==2.5.0
 pylint==2.4.4
 pyparsing==2.4.7
 python-dateutil==2.8.1
